fixed spacing on footer

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -277,6 +277,7 @@ footer {
     min-height: unset !important;
     background-color: black;
     color: #eee;
+    padding: 4rem 0 3rem;
 }
 
 footer small a {
